replaced URL with URI